--- a/k8s-deployment/000-namespaces.yaml
+++ b/k8s-deployment/000-namespaces.yaml
@@ -23,3 +23,10 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: measurement-proxy
+
+---
+
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kafka
