--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -3,6 +3,7 @@ import groovy.json.JsonSlurper
 def sectionHeaderStyle = """
     text-align: center;
     font-size: 22px;
+    font-weight: bold;
     padding: 4px;
 """
 
