--- a/helm/kafka/templates/kafka-deployment.yaml
+++ b/helm/kafka/templates/kafka-deployment.yaml
@@ -29,6 +29,14 @@ spec:
               value: zookeeper1:2181,zookeeper2:2181,zookeeper3:2181
             - name: KAFKA_BROKER_ID
               value: "0"
+            - name: KAFKA_LISTENERS
+              value: LISTENER://:9092
+            - name: KAFKA_ADVERTISED_LISTENERS
+              value: "LISTENER://kafka-service-0.{{ .Release.Namespace }}.svc.cluster.local:9092"
+            - name: KAFKA_INTER_BROKER_LISTENER_NAME
+              value: LISTENER
+            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+              value: LISTENER:PLAINTEXT
             - name: KAFKA_ADVERTISED_HOST_NAME
               value: "kafka-service-0.{{ .Release.Namespace }}.svc.cluster.local"
             - name: KAFKA_ADVERTISED_PORT
@@ -66,6 +74,14 @@ spec:
               value: zookeeper1:2181,zookeeper2:2181,zookeeper3:2181
             - name: KAFKA_BROKER_ID
               value: "1"
+            - name: KAFKA_LISTENERS
+              value: LISTENER://:9093
+            - name: KAFKA_ADVERTISED_LISTENERS
+              value: "LISTENER://kafka-service-1.{{ .Release.Namespace }}.svc.cluster.local:9093"
+            - name: KAFKA_INTER_BROKER_LISTENER_NAME
+              value: LISTENER
+            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+              value: LISTENER:PLAINTEXT
             - name: KAFKA_ADVERTISED_HOST_NAME
               value: "kafka-service-1.{{ .Release.Namespace }}.svc.cluster.local"
             - name: KAFKA_ADVERTISED_PORT
@@ -103,6 +119,14 @@ spec:
               value: zookeeper1:2181,zookeeper2:2181,zookeeper3:2181
             - name: KAFKA_BROKER_ID
               value: "2"
+            - name: KAFKA_LISTENERS
+              value: LISTENER://:9094
+            - name: KAFKA_ADVERTISED_LISTENERS
+              value: "LISTENER://kafka-service-2.{{ .Release.Namespace }}.svc.cluster.local:9094"
+            - name: KAFKA_INTER_BROKER_LISTENER_NAME
+              value: LISTENER
+            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+              value: LISTENER:PLAINTEXT
             - name: KAFKA_ADVERTISED_HOST_NAME
               value: "kafka-service-2.{{ .Release.Namespace }}.svc.cluster.local"
             - name: KAFKA_ADVERTISED_PORT
