--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -52,29 +52,37 @@ pipeline {
         timestamps()
     }
 
+    environment {
+        REGISTRY_PREFIX='morova'
+        BACKEND_DOCKER_IMAGE_NAME='kubedepend-backend'
+        WORKER_DOCKER_IMAGE_NAME='kubedepend-worker'
+    }
+
     stages {
         stage('Prepare build') {
             steps {
                 checkout scm
                 sh "aws --version"
 
-                echo "Setup aws config"
                 script {
-
                     useEnhancements = UseKafka == 'true' || UseHPA == 'true' || UseKEDA == 'true'
 
+                    env.DOCKER_TAG = env.TIMESTAMP
+                    DOCKER_TAG = env.TIMESTAMP
+
+                    echo "Setup aws config"
                     withCredentials(
-                    [
-                        usernamePassword(
-                            credentialsId: 'aws-key',
-                            usernameVariable: 'AWS_ACCESS_KEY_ID',
-                            passwordVariable: 'AWS_SECRET_ACCESS_KEY'
-                        ),
-                        string(
-                            credentialsId: 'aws-session-token',
-                            variable: 'AWS_SESSION_TOKEN'
-                        )
-                    ]
+                        [
+                            usernamePassword(
+                                credentialsId: 'aws-key',
+                                usernameVariable: 'AWS_ACCESS_KEY_ID',
+                                passwordVariable: 'AWS_SECRET_ACCESS_KEY'
+                            ),
+                            string(
+                                credentialsId: 'aws-session-token',
+                                variable: 'AWS_SESSION_TOKEN'
+                            )
+                        ]
                     ) {
                         sh """
                             |aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
@@ -84,7 +92,23 @@ pipeline {
                             |aws configure set default.output json
                         """.stripMargin('|')
                     }
-                }            
+                    echo "Setup docker config"
+                    withCredentials(
+                        [
+                            usernamePassword(
+                                credentialsId: 'dockerhub-creds',
+                                usernameVariable: 'DOCKER_USER',
+                                passwordVariable: 'DOCKER_PASS'
+                            )
+                        ]
+                    ) {
+                        sh '''#!/bin/bash
+                            export AUTH="$DOCKER_USER:$DOCKER_PASSWD" && \
+                            mkdir -p $WORKSPACE/.docker && \
+                            echo "{ \\"auths\\": { \\"https://index.docker.io/v1/\\": { \\"auth\\": \\"$(echo -n $AUTH|base64 -w 0)\\" }}}" > "$WORKSPACE/.docker/config.json"
+                        '''
+                    }
+                }
             }
         }
 
@@ -260,7 +284,24 @@ pipeline {
                 }
             }
         }
+        
+        stage('APP - build') {
+            when { expression { DeployApp == 'true' } }
+            steps {
+                echo "Build and push backend"
+                dir('backend') {
+                    sh "./gradlew bootBuildImage --imageName=${REGISTRY_PREFIX}/${BACKEND_DOCKER_IMAGE_NAME}:${DOCKER_TAG}"
+                    sh "docker --config $WORKSPACE/.docker push ${REGISTRY_PREFIX}/${BACKEND_DOCKER_IMAGE_NAME}:${DOCKER_TAG}"
+                }
 
+                echo "Build and push worker"
+                dir('worker') {
+                    sh "./gradlew bootBuildImage --imageName=${REGISTRY_PREFIX}/${WORKER_DOCKER_IMAGE_NAME}:${DOCKER_TAG}"
+                    sh "docker --config $WORKSPACE/.docker push ${REGISTRY_PREFIX}/${WORKER_DOCKER_IMAGE_NAME}:${DOCKER_TAG}"
+                }
+
+            }
+        }
 
         stage('APP - deploy') {
             when { expression { DeployApp == 'true' } }
@@ -268,7 +309,11 @@ pipeline {
                 echo "Deploy application"
                 script {
                     sh """
-                    |helm upgrade --install kubedepend ./helm/kubedepend -n kubedepend
+                    |helm upgrade --install kubedepend ./helm/kubedepend -n kubedepend \
+                    |   --set backend.image.repository=${REGISTRY_PREFIX}/${WORKER_DOCKER_IMAGE_NAME} \
+                    |   --set backend.image.tag=${DOCKER_TAG} \
+                    |   --set worker.image.repository=${REGISTRY_PREFIX}/${BACKEND_DOCKER_IMAGE_NAME} \
+                    |   --set worker.image.tag=${DOCKER_TAG}
                     |kubectl apply -f k8s-deployment/measurement-proxy.yaml
                     """.stripMargin('|')
                 }
