--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -308,14 +308,12 @@ pipeline {
             steps {
                 echo "Deploy application"
                 script {
-                    sh """
-                    |helm upgrade --install kubedepend ./helm/kubedepend -n kubedepend \
-                    |   --set backend.image.repository=${REGISTRY_PREFIX}/${WORKER_DOCKER_IMAGE_NAME} \
-                    |   --set backend.image.tag=${DOCKER_TAG} \
-                    |   --set worker.image.repository=${REGISTRY_PREFIX}/${BACKEND_DOCKER_IMAGE_NAME} \
-                    |   --set worker.image.tag=${DOCKER_TAG}
-                    |kubectl apply -f k8s-deployment/measurement-proxy.yaml
-                    """.stripMargin('|')
+                    sh "helm upgrade --install kubedepend ./helm/kubedepend -n kubedepend \
+                       --set backend.image.repository=${REGISTRY_PREFIX}/${WORKER_DOCKER_IMAGE_NAME} \
+                       --set backend.image.tag=${DOCKER_TAG} \
+                       --set worker.image.repository=${REGISTRY_PREFIX}/${BACKEND_DOCKER_IMAGE_NAME} \
+                       --set worker.image.tag=${DOCKER_TAG}"
+                    sh "kubectl apply -f k8s-deployment/measurement-proxy.yaml"
                 }
             }
         }
