--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -1,25 +1,36 @@
 # Server properties
-server.port=${BACKEND_PORT:8000}
+server:
+  port: ${BACKEND_PORT:8000}
 
 # Worker properties
-worker.host=${WORKER_HOST:localhost}
-worker.port=${WORKER_PORT:5000}
+worker:
+  host: ${WORKER_HOST:localhost}
+  port: ${WORKER_PORT:5000}
 
 # Database Properties
-database.host=${MYSQL_DB_HOST:localhost}
-database.port=${MYSQL_DB_PORT:3306}
-database.db=${MYSQL_DB_DB_NAME:jobs}
-#spring.datasource.url=jdbc:mysql://localhost:3306/jobs?useSSl=false
-spring.datasource.url=jdbc:mysql://${database.host}:${database.port}/${database.db}?useSSl=false
-
-spring.datasource.username=jobsuser
-spring.datasource.password=userpass
-
+database:
+  host: ${MYSQL_DB_HOST:localhost}
+  port: ${MYSQL_DB_PORT:3306}
+  db: ${MYSQL_DB_DB_NAME:jobs}
+#spring.datasource.url: jdbc:mysql://localhost:3306/jobs?useSSl: false
+spring:
+  datasource:
+    url: "jdbc:mysql://${database.host}:${database.port}/${database.db}?useSSl: false"
+    username: jobsuser
+    password: userpass
 # Hibarnate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=update
+  jpa:
+    hibernate:
+      ddl-auto: update
+
+
+messaging: activemq
 
 # ActiveMQ
-
-activemq.broker.url=tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}
-activemq.worker.queue=${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
-activemq.backend.queue=${ACTIVEMQ_BACKEND_QUEUE:jobBackendQueue}
+activemq:
+  broker:
+    url: "tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}"
+  worker:
+    queue: ${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
+  backend:
+    queue: ${ACTIVEMQ_BACKEND_QUEUE:jobBackendQueue}
