--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ database:
 #spring.datasource.url: jdbc:mysql://localhost:3306/jobs?useSSl: false
 spring:
   datasource:
-    url: "jdbc:mysql://${database.host}:${database.port}/${database.db}?useSSl: false"
+    url: "jdbc:mysql://${database.host}:${database.port}/${database.db}?useSSl=false"
     username: jobsuser
     password: userpass
 # Hibarnate ddl auto (create, create-drop, validate, update)
@@ -34,3 +34,10 @@ activemq:
     queue: ${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
   backend:
     queue: ${ACTIVEMQ_BACKEND_QUEUE:jobBackendQueue}
+
+# Kafka
+kafka:
+  bootstrap-server: ${KAFKA_BROKER}
+  topics:
+    worker: jobWorkerTopic
+    backend: jobBackendTopic
