--- a/worker/src/main/resources/application.yaml
+++ b/worker/src/main/resources/application.yaml
@@ -8,8 +8,9 @@ management:
         include: health,info,prometheus
 
 
-# ActiveMQ
+messaging: activemq
 
+# ActiveMQ
 activemq:
   broker:
     url: "tcp://${ACTIVEMQ_BROKER_HOST:localhost}:${ACTIVEMQ_BROKER_PORT:61616}?jms.prefetchPolicy.queuePrefetch=1"
@@ -17,3 +18,12 @@ activemq:
     queue: ${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
   backend:
     queue: ${ACTIVEMQ_BACKEND_QUEUE:jobBackendQueue}
+
+# Kafka
+kafka:
+  bootstrap-server: ${KAFKA_BROKER}
+  topics:
+    worker: jobWorkerTopic
+    backend: jobBackendTopic
+  consumer:
+    group-id: worker
