--- a/helm/kubedepend/templates/004-deployments.yaml
+++ b/helm/kubedepend/templates/004-deployments.yaml
@@ -215,7 +215,7 @@ spec:
 
 ---
 
-{{-- if eq .Values.messaging "activemq" -}}
+{{- if eq .Values.messaging "activemq" -}}
 
 apiVersion: apps/v1
 kind: Deployment
