--- a/helm/kafka/templates/kafka-deployment.yaml
+++ b/helm/kafka/templates/kafka-deployment.yaml
@@ -24,6 +24,8 @@ spec:
           ports:
             - containerPort: 9092
               name: tcp-kafka
+            - containerPort: 7071
+              name: tcp-jmx
           env:
             - name: KAFKA_ZOOKEEPER_CONNECT
               value: zookeeper1:2181,zookeeper2:2181,zookeeper3:2181
@@ -41,6 +43,8 @@ spec:
               value: "kafka-service-0.{{ .Release.Namespace }}.svc.cluster.local"
             - name: KAFKA_ADVERTISED_PORT
               value: "9092"
+            - name: KAFKA_OPTS
+              value: -javaagent:/usr/app/jmx_prometheus_javaagent.jar=7071:/usr/app/prom-jmx-agent-config.yml
           resources:
             {{- toYaml .Values.kafka.resources | nindent 12 }}
 ---
@@ -69,6 +73,8 @@ spec:
           ports:
             - containerPort: 9093
               name: tcp-kafka
+            - containerPort: 7071
+              name: tcp-jmx
           env:
             - name: KAFKA_ZOOKEEPER_CONNECT
               value: zookeeper1:2181,zookeeper2:2181,zookeeper3:2181
@@ -86,6 +92,8 @@ spec:
               value: "kafka-service-1.{{ .Release.Namespace }}.svc.cluster.local"
             - name: KAFKA_ADVERTISED_PORT
               value: "9093"
+            - name: KAFKA_OPTS
+              value: -javaagent:/usr/app/jmx_prometheus_javaagent.jar=7071:/usr/app/prom-jmx-agent-config.yml
           resources:
             {{- toYaml .Values.kafka.resources | nindent 12 }}
 ---
@@ -114,6 +122,8 @@ spec:
           ports:
             - containerPort: 9094
               name: tcp-kafka
+            - containerPort: 7071
+              name: tcp-jmx
           env:
             - name: KAFKA_ZOOKEEPER_CONNECT
               value: zookeeper1:2181,zookeeper2:2181,zookeeper3:2181
@@ -131,5 +141,7 @@ spec:
               value: "kafka-service-2.{{ .Release.Namespace }}.svc.cluster.local"
             - name: KAFKA_ADVERTISED_PORT
               value: "9094"
+            - name: KAFKA_OPTS
+              value: -javaagent:/usr/app/jmx_prometheus_javaagent.jar=7071:/usr/app/prom-jmx-agent-config.yml
           resources:
             {{- toYaml .Values.kafka.resources | nindent 12 }}
