--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -264,6 +264,7 @@ pipeline {
                     |echo "Grafana secret is:"
                     |kubectl get secret --namespace monitoring grafana -o jsonpath="{.data.admin-password}" | base64 --decode ; echo
                     |helm upgrade --install chaos-mesh chaos-mesh/chaos-mesh --namespace=chaos-testing -f helm/chaos-mesh/values.yaml --version v2.0.2
+                    |helm upgrade --install kafka-exporter ./helm/kafka-exporter -n monitoring
                     """.stripMargin('|')
                 }
             }
