--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -1615,6 +1615,11 @@ extraScrapeConfigs: |
         - kafka-service-2.kafka.svc.cluster.local:7071
         labels:
           namespace: kafka
+
+  - job_name: kafka-exporter
+    static_configs:
+      - targets:
+        - kafka-exporter.monitoring.svc.cluster.local:9308
   
   - job_name: worker-pods
     kubernetes_sd_configs:
