Use Kafka adapted custom metric for hpa scaling

--- a/helm/kubedepend/templates/hpa.yaml
+++ b/helm/kubedepend/templates/hpa.yaml
@@ -14,7 +14,7 @@ spec:
       - type: Object
         object:
           metric:
-              name: needed_worker_ratio
+              name: {{ .Values.hpa.metricName }}
           describedObject:
               apiVersion: /v1
               kind: Namespace
