--- a/helm/prometheus/values.yaml
+++ b/helm/prometheus/values.yaml
@@ -1621,7 +1621,7 @@ extraScrapeConfigs: |
       - targets:
         - kafka-exporter.monitoring.svc.cluster.local:9308
         labels:
-          namespace: kubedepend # needed, so needed_worker_ratio_kafka custom metric has value
+          namespace: kubedepend # needed, so needed_worker_ratio_kafka custom metric has value (we perform addition on namespace)
   
   - job_name: worker-pods
     kubernetes_sd_configs:
