--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -28,8 +28,7 @@ pipeline {
 
         separator(name: 'ENHANCEMENTS', sectionHeader: 'Enhancements', separatorStyle: 'border-width: 5', sectionHeaderStyle: sectionHeaderStyle)
         booleanParam(name: 'UseKafka', defaultValue: false, description: 'Set to TRUE, to deploy Kafka and configure the app to use it')
-        booleanParam(name: 'UseHPA', defaultValue: false, description: 'Set to TRUE, to deploy HPA with the application')
-        booleanParam(name: 'UseKEDA', defaultValue: false, description: 'Set to TRUE, to deploy KEDA')
+        booleanParam(name: 'UseHeartbeats', defaultValue: false, description: 'Set to TRUE, to use Heartbeats to handle lost jobs')
 
         separator(name: 'APPLICATION', sectionHeader: 'Application', separatorStyle: 'border-width: 5', sectionHeaderStyle: sectionHeaderStyle)
         booleanParam(name: 'DeployApp', defaultValue: true, description: 'Set to TRUE to deploy the application')
@@ -66,7 +65,7 @@ pipeline {
                 sh "aws --version"
 
                 script {
-                    useEnhancements = UseKafka == 'true' || UseHPA == 'true' || UseKEDA == 'true'
+                    useEnhancements = UseKafka == 'true' || UseHeartbeats == 'true'
 
                     env.DOCKER_TAG = env.BUILD_NUMBER
                     DOCKER_TAG = env.BUILD_NUMBER
@@ -332,7 +331,8 @@ pipeline {
                        --set worker.image.repository=${REGISTRY_PREFIX}/${WORKER_DOCKER_IMAGE_NAME} \
                        --set worker.image.tag=${DOCKER_TAG} \
                        --set messaging=${UseKafka == 'true' ? 'kafka' : 'activemq'} \
-                       --set hpa.metricName=${UseKafka == 'true' ? 'needed_worker_ratio_kafka' : 'needed_worker_ratio'}"
+                       --set hpa.metricName=${UseKafka == 'true' ? 'needed_worker_ratio_kafka' : 'needed_worker_ratio'}
+                       --set useHeartbeats=${UseHeartbeats == 'true' ? true : false}"
                     sh "kubectl apply -f k8s-deployment/measurement-proxy.yaml"
                 }
             }
