Implement activemq heartbeat in worker

--- a/worker/src/main/resources/application.yaml
+++ b/worker/src/main/resources/application.yaml
@@ -18,6 +18,8 @@ activemq:
     queue: ${ACTIVEMQ_WORKER_QUEUE:jobWorkerQueue}
   backend:
     queue: ${ACTIVEMQ_BACKEND_QUEUE:jobBackendQueue}
+  jobstatus:
+    queue: ${ACTIVEMQ_JOBSTATUS_QUEUE:jobStatus}
 
 # Kafka
 kafka:
@@ -27,3 +29,7 @@ kafka:
     backend: jobBackendTopic
   consumer:
     group-id: worker
+
+# Hearbeats service
+heartbeats:
+  enabled: false
