Implement heartbeats for kafka

--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -46,6 +46,7 @@ kafka:
   topics:
     worker: jobWorkerTopic
     backend: jobBackendTopic
+    jobstatus: jobStatus
   consumer:
     group-id: backend
 
