--- a/worker/src/main/resources/application.yaml
+++ b/worker/src/main/resources/application.yaml
@@ -27,6 +27,7 @@ kafka:
   topics:
     worker: jobWorkerTopic
     backend: jobBackendTopic
+    jobstatus: jobStatus
   consumer:
     group-id: worker
 
