--- a/.github/workflows/latex-pdf.yml
+++ b/.github/workflows/latex-pdf.yml
@@ -10,7 +10,8 @@ jobs:
       - name: Compile LaTeX document
         uses: xu-cheng/latex-action@v2
         with:
-          root_file: docs/thesis.tex
+          root_file: thesis.tex
+          working_directory: docs
 
       - name: Upload document
         uses: actions/upload-artifact@v2
