--- a/.gitignore
+++ b/.gitignore
@@ -469,6 +469,9 @@ ipython_config.py
 ## Generated if empty string is given at "Please type another file name for output:"
 .pdf
 
+### Do not upload pdf files
+*.pdf
+
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
 *.bcf
