--- a/utils/infrastructure.yaml
+++ b/utils/infrastructure.yaml
@@ -41,7 +41,7 @@ Parameters:
       - '1.17'
       - '1.16'
 
-  WorkerNodeInstanceType:
+  NodeInstanceType:
     Description: EC2 instance type for the primary node instances
     Type: String
     Default: t3.medium
@@ -129,30 +129,48 @@ Parameters:
       - z1d.6xlarge
       - z1d.12xlarge
 
+  NodeEc2SshKey:
+    Description: SSH key name to allow secure remote access to your nodes
+    Type: String
+    Default: morova-eks-keypair
+
   WorkerNodeVolumeSize:
     Description: Node volume size
     Type: Number
     Default: 20
-
   WorkerNodeAutoScalingGroupMinSize:
     Description: Minimum size of Node Group ASG.
     Type: Number
-    Default: 3
+    Default: 2
   WorkerNodeAutoScalingGroupDesiredCapacity:
     Description: Desired capacity of Node Group ASG.
     Type: Number
-    Default: 5
+    Default: 4
   WorkerNodeAutoScalingGroupMaxSize:
     Description: >-
       Maximum size of Node Group ASG. Set to at least 1 greater than
       WorkerNodeAutoScalingGroupDesiredCapacity.
     Type: Number
-    Default: 6
+    Default: 5
 
-  WorkerNodeEc2SshKey:
-    Description: SSH key name to allow secure remote access to your nodes
-    Type: String
-    Default: morova-eks-keypair
+  FrameworkNodeVolumeSize:
+    Description: Framework node volume size
+    Type: Number
+    Default: 20
+  FrameworkNodeAutoScalingGroupMinSize:
+    Description: Minimum size of Framework node Group ASG.
+    Type: Number
+    Default: 2
+  FrameworkNodeAutoScalingGroupDesiredCapacity:
+    Description: Desired capacity of Framework node Group ASG.
+    Type: Number
+    Default: 3
+  FrameworkNodeAutoScalingGroupMaxSize:
+    Description: >-
+      Maximum size of Framework node Group ASG. Set to at least 1 greater than
+      FrameworkNodeAutoScalingGroupDesiredCapacity.
+    Type: Number
+    Default: 4
 
 Metadata:
   AWS::CloudFormation::Interface:
@@ -172,7 +190,7 @@ Metadata:
       - Label:
           default: "Worker Node Configuration"
         Parameters:
-          - WorkerNodeInstanceType
+          - NodeInstanceType
           - WorkerNodeVolumeSize
       - Label:
           default: "Worker Node Auto Scaling Group Configuration"
@@ -180,6 +198,12 @@ Metadata:
           - WorkerNodeAutoScalingGroupMinSize
           - WorkerNodeAutoScalingGroupDesiredCapacity
           - WorkerNodeAutoScalingGroupMaxSize
+      - Label:
+          default: "Framework Node Auto Scaling Group Configuration"
+        Parameters:
+          - FrameworkNodeAutoScalingGroupMinSize
+          - FrameworkNodeAutoScalingGroupDesiredCapacity
+          - FrameworkNodeAutoScalingGroupMaxSize
         
 
 Resources:
@@ -358,7 +382,7 @@ Resources:
         - Arn
       Version: !Ref EKSVersion
 
-  WorkerNodeInstanceRole:
+  NodeInstanceRole:
     Type: 'AWS::IAM::Role'
     Properties:
       RoleName: 'morova-Worker-Node-Instance-Role'
@@ -380,13 +404,13 @@ Resources:
         - Key: Cost Center
           Value: 'DDOS'
 
-  WorkerNodeInstanceProfile:
+  NodeInstanceProfile:
     Type: 'AWS::IAM::InstanceProfile'
     Properties:
       InstanceProfileName: 'morova-Worker-Node-Instance-Profile'
       Path: /
       Roles:
-        - !Ref WorkerNodeInstanceRole
+        - !Ref NodeInstanceRole
 
   ClusterAutoScalerPolicy:
     Type: 'AWS::IAM::Policy'
@@ -406,9 +430,9 @@ Resources:
               - 'ec2:DescribeLaunchTemplateVersions'
             Resource: '*'
       Roles:
-        - !Ref WorkerNodeInstanceRole
+        - !Ref NodeInstanceRole
   
-  EKSNodegroup:
+  WorkerEKSNodegroup:
     Type: 'AWS::EKS::Nodegroup'
     Properties:
       ClusterName: !Ref EKSCluster
@@ -418,28 +442,55 @@ Resources:
       #LaunchTemplate: 
       #Id: !Ref WorkerNodeLaunchTemplate
       InstanceTypes: 
-        - !Ref WorkerNodeInstanceType
+        - !Ref NodeInstanceType
       DiskSize: !Ref WorkerNodeVolumeSize
       AmiType: AL2_x86_64
       CapacityType: ON_DEMAND
-      NodeRole: !GetAtt WorkerNodeInstanceRole.Arn
+      NodeRole: !GetAtt NodeInstanceRole.Arn
       RemoteAccess: 
-        Ec2SshKey: !Ref WorkerNodeEc2SshKey
+        Ec2SshKey: !Ref NodeEc2SshKey
       ScalingConfig:
         MinSize: !Ref WorkerNodeAutoScalingGroupMinSize
         DesiredSize: !Ref WorkerNodeAutoScalingGroupDesiredCapacity
         MaxSize: !Ref WorkerNodeAutoScalingGroupMaxSize
       UpdateConfig:
         MaxUnavailable: 1
-      # Labels:
-      #   rapidminer.customer: !Ref CustomerID
-      #   nodegroup: !Ref CustomerID
       Subnets:
         - !Ref Subnet01
         - !Ref Subnet02
         - !Ref Subnet03
+      Labels:
+        nodegroup: app
       Tags:
         Name: 'morova-EKSNodegroup-Workers'
+        'Cost Center': 'DDOS'
+
+  FrameworkEKSNodegroup:
+    Type: 'AWS::EKS::Nodegroup'
+    Properties:
+      ClusterName: !Ref EKSCluster
+      InstanceTypes:
+        - !Ref NodeInstanceType
+      DiskSize: !Ref FrameworkNodeVolumeSize
+      AmiType: AL2_x86_64
+      CapacityType: ON_DEMAND
+      NodeRole: !GetAtt NodeInstanceRole.Arn
+      RemoteAccess:
+        Ec2SshKey: !Ref NodeEc2SshKey
+      ScalingConfig:
+        MinSize: !Ref FrameworkNodeAutoScalingGroupMinSize
+        DesiredSize: !Ref FrameworkNodeAutoScalingGroupDesiredCapacity
+        MaxSize: !Ref FrameworkNodeAutoScalingGroupMaxSize
+      UpdateConfig:
+        MaxUnavailable: 1
+      Subnets:
+        - !Ref Subnet01
+        - !Ref Subnet02
+        - !Ref Subnet03
+      Labels:
+        nodegroup: framework
+      Tags:
+        Name: 'morova-EKSNodegroup-Framework'
         'Cost Center': 'DDOS'
 
 Outputs:
